# proxima

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  proxima_client.lua  test_client.py  test_multiple_clients.py  vite.config.ts
scripts/: build.js  hash_util.js  tauri_build.js  test_client.py  test_multiple_clients.py
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: launcher.rs  launcher_mode.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/editor/: file_tree.rs  files.rs  mod.rs
src-tauri/src/commands/executor/: execute.rs  mod.rs  status.rs
src-tauri/src/commands/explorer/: decompile.rs  explorer.rs  lifecycle.rs  mod.rs  properties.rs  search.rs  tree.rs
src-tauri/src/commands/launcher/: fetch_past_versions.rs  launch.rs  mod.rs  register.rs
src-tauri/src/commands/logs/: add_log.rs  mod.rs
src-tauri/src/commands/remote_spy/: decompile.rs  generate_code.rs  lifecycle.rs  mod.rs  remote_spy.rs
src-tauri/src/commands/script_hub/: mod.rs
src-tauri/src/commands/settings/: mod.rs
src-tauri/src/models/: executor.rs  explorer.rs  file.rs  log.rs  mod.rs  remote_spy.rs
src-tauri/src/services/: api_dump.rs  autoexec.rs  file_watcher.rs  filesystem.rs  http_server.rs  launcher_ipc.rs  mod.rs  security.rs  websocket.rs
src-tauri/src/services/launcher/: installation.rs  ipc.rs  mod.rs  mutex.rs  paths.rs  process.rs  settings.rs  version.rs
src-tauri/src/services/websocket/: client_manager.rs  heartbeat.rs  messages.rs  mod.rs  server.rs
src-tauri/src/services/websocket/handlers/: executor.rs  explorer.rs  logging.rs  mod.rs  relay.rs  remote_spy.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: client_helpers.rs  clients.rs  events.rs  ignore.rs  logging.rs  mod.rs  paths.rs  security.rs
src-tauri/windows/: installer.nsi
src/components/: Dock.vue  DockArea.vue  DockLiquidGlass.vue  FileExplorer.vue  FileTreeItem.vue  LogsPanel.vue  (+4 more)
(+124 files in other folders)
