[package]
name = "proxima"
version = "0.1.0"
description = "A universal script executor custom UI"
authors = ["riptxde"]
license = "AGPL-3.0"
repository = "https://github.com/riptxde/proxima"
edition = "2021"
rust-version = "1.77.2"
default-run = "proxima"

[lib]
name = "proxima_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
notify = "6.1"
notify-debouncer-full = "0.3"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tauri-plugin-store = "2"
warp = "0.3"
bytes = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
rmp-serde = "1.3"
zip = "2.2"
winreg = "0.52"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
